syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.ravine.core.server.cluster";

import "client-service.proto";

service ClusterService {
    rpc AppendEntries (RpcAppendEntriesRequest) returns (RpcAppendEntriesResponse) {}
    rpc RequestVote (RpcRequestVoteRequest) returns (RpcRequestVoteResponse) {}
}

message RpcAppendEntriesRequest {
    uint32 term = 1;
    string topicId = 2;
    string leaderId = 3;
    uint64 prevLogIndex = 4;
    uint32 prevLogTerm = 5;
    repeated RpcEntry entries = 6;
    uint64 leaderCommit = 7;
}

message RpcAppendEntriesResponse {
    uint32 term = 1;
    bool success = 2;
}

message RpcEntry {
    string uuid = 1;
    uint32 term = 2;
    string topic = 3;
    repeated RpcKV kv = 4;
}

message RpcRequestVoteRequest {
    uint32 term = 1;
    string candidateId = 2;
    repeated RpcLogTail logTails = 3;
}

message RpcLogTail {
    string topicId = 1;
    uint64 lastLogIndex = 2;
    uint32 lastLogTerm = 3;
}

message RpcRequestVoteResponse {
    uint32 term = 1;
    bool voteGranted = 2;
}
